gccida/c3/check_trad_stringification
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1935:35: error: unknown type name 'cpp_reader_0'; did you mean 'cpp_reader'?
void  check_trad_stringification( cpp_reader_0 *pfile, const cpp_macro_0 *macro, const cpp_string_0 *string) 
                                  ^~~~~~~~~~~~
                                  cpp_reader
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cpplib.h:36:27: note: 'cpp_reader' declared here
typedef struct cpp_reader cpp_reader;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1935:62: error: unknown type name 'cpp_macro_0'; did you mean 'cpp_macro'?
void  check_trad_stringification( cpp_reader_0 *pfile, const cpp_macro_0 *macro, const cpp_string_0 *string) 
                                                             ^~~~~~~~~~~
                                                             cpp_macro
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cpplib.h:43:26: note: 'cpp_macro' declared here
typedef struct cpp_macro cpp_macro;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1935:88: error: unknown type name 'cpp_string_0'; did you mean 'cpp_string'?
void  check_trad_stringification( cpp_reader_0 *pfile, const cpp_macro_0 *macro, const cpp_string_0 *string) 
                                                                                       ^~~~~~~~~~~~
                                                                                       cpp_string
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cpplib.h:41:27: note: 'cpp_string' declared here
typedef struct cpp_string cpp_string;
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1943:7: error: unknown type name 'cpp_hashnode_0'; did you mean 'cpp_hashnode'?
const cpp_hashnode_0 *node; // [rsp+10h] [rbp-40h] 
      ^~~~~~~~~~~~~~
      cpp_hashnode
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cpplib.h:42:29: note: 'cpp_hashnode' declared here
typedef struct cpp_hashnode cpp_hashnode;
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1959:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*p] & 0x200) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/cppmacro.c:1978:8: error: use of undeclared identifier 'sch_istable'; did you mean '_sch_istable'?
if ( ( sch_istable[*q] & 0x204) == 0 ) 
       ^~~~~~~~~~~
       _sch_istable
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/safe-ctype.h:72:29: note: '_sch_istable' declared here
extern const unsigned short _sch_istable[256];
                            ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_trad_stringification/src/obj/cppmacro.o] Error 1
